RESOLVED FIXED96873
Including HexNumber.h fails build if hexDigitsForMode is not referenced
https://bugs.webkit.org/show_bug.cgi?id=96873
Summary Including HexNumber.h fails build if hexDigitsForMode is not referenced
Glenn Adams
Reported 2012-09-15 18:20:52 PDT
If HexNumber.h is included without expanding one of the templates that references hexDigitsForMode, then some release builds fail due to presence of unneeded internal declaration. For example, see [1]. Source/WTF/wtf/HexNumber.h:34:20: error: function 'hexDigitsForMode' is not needed and will not be emitted [-Werror,-Wunneeded-internal-declaration,12] static const char* hexDigitsForMode(HexConversionMode mode) ^ 1 error generated. [1] http://build.webkit.org/builders/Apple%20Lion%20Release%20%28Build%29/builds/3900/steps/compile-webkit/logs/stdio
Attachments
Patch (1.35 KB, patch)
2012-09-15 18:28 PDT, Glenn Adams
no flags
Patch (1.69 KB, patch)
2012-09-15 21:34 PDT, Glenn Adams
no flags
Glenn Adams
Comment 1 2012-09-15 18:28:11 PDT
Glenn Adams
Comment 2 2012-09-15 21:34:43 PDT
WebKit Review Bot
Comment 3 2012-09-17 17:39:41 PDT
Comment on attachment 164304 [details] Patch Clearing flags on attachment: 164304 Committed r128829: <http://trac.webkit.org/changeset/128829>
WebKit Review Bot
Comment 4 2012-09-17 17:39:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.