Including HexNumber.h fails build if hexDigitsForMode is not referenced https://bugs.webkit.org/show_bug.cgi?id=96873

Patch by Glenn Adams <glenn@skynav.com> on 2012-09-17
Reviewed by Benjamin Poulain.

Ensure release build is possible when hexDigitsForMode is not referenced by
template expansion.

* wtf/HexNumber.h:
(WTF::Internal::hexDigitsForMode):
Change hexDigitsForMode to inline (rather than static). Make string literals
{lower,upper}HexDigits non-local and non-static, but const, to which the linker
should merge references in the RO data segment.

Canonical link: https://commits.webkit.org/114895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128829 268f45cc-cd09-0410-ab3c-d52691b4dbfc